--- a/index.html
+++ b/index.html
@@ -151,18 +151,44 @@
     </section>
     <!--super clients section-->
     <section class="my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16  py-24 flex flex-col lg:flex-row gap-12 ">
-      <div class="space-y-5">
+      <div class="flex items-center lg:pr-28">
+       <div class="space-y-5">
         <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
         <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
         <button>Show All</button>
+       </div>
       </div>
-      <div>
-        <!--review-->
-        <div class=" p-10 rounded-lg bg-white relative">
-          <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+      <!--review contain-->
+      <div class="relative">
+        <!--next review-->
+        <div class=" p-10 z-10 mb-16 opacity-40 rounded-lg bg-white relative">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
           <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
           <h4 class="font-bold mt-5">lham Yuda</h4>
           <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <!--current review-->
+        <div class=" p-10 z-20 top-40 rounded-lg lg:-left-24 lg:w-[430px] bg-white absolute">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">lham Yuda</h4>
+          <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <!--previous review-->
+        <div class=" p-10 z-10 opacity-40 rounded-lg bg-white relative">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">lham Yuda</h4>
+          <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
         </div>
       </div>
     </section>
