--- a/index.html
+++ b/index.html
@@ -41,20 +41,22 @@
 </head>
 <body class="font-manrope">
   <header class="container mx-auto">
-    <div class="hero">
-      <div class="hero-content flex-col lg:flex-row">
+    <div class="my-16">
+      <div class="flex justify-between items-center flex-col lg:flex-row">
         <div>
           <h1 class="text-7xl font-extrabold">It's good 
             <br>tea time at The <br>Tea House</h1>
           <p class="py-6">
             Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
           </p>
-          <button class="btn btn-primary">Explore More</button>
+          <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More 
+            <i class="fa-light fa-arrow-up-right"></i> 
+          </button>
         </div>
         <div>
           <img
         src="images/banner.png"
-        class="max-w-sm " />
+        class=" " />
         <!--ratings badge-->
         <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -67,7 +69,7 @@
     </div>
 
   </header>
-  <main>
+  <main class="container mx-auto">
 
     <!--featured section-->
     <section class="text-center my-24 ">
@@ -242,7 +244,7 @@
     </section>
     
   </main>
-  <footer class="bg-amber-200 text-base-content px-48 py-10 my-12">
+  <footer class="bg-amber-100 text-base-content px-4 lg:px-48 py-10 my-12">
     <div class="flex justify-between my-12 ">
       <img src="images/cup.png" alt="">
       <p>
